--- a/toSwapX3/index.html
+++ b/toSwapX3/index.html
@@ -46,7 +46,7 @@
     <span>私钥</span><br>
     <div id=""><textarea name="" id="key" cols="80" rows="10"></textarea></div>
     <span>总执行数量</span>
-    <div id=""><textarea name="" id="numMax" cols="80" rows="2">10</textarea></div>
+    <div id=""><textarea name="" id="numMax" cols="80" rows="2">99</textarea></div>
     <span>间隔(秒)</span>
     <div id=""><textarea name="" id="interval" cols="80" rows="2">60</textarea></div>
     <span>买入(用usdt购买)</span>
@@ -70,6 +70,7 @@
 
 
     <p>步骤 1.放私钥 2.授权2种代币,3.等待授权成功然后执行</p>
+    <p>提示:执行过程中也能动态修改参数</p>
 
 </body>
 
