--- a/swapV2/index.html
+++ b/swapV2/index.html
@@ -48,7 +48,7 @@
 
 
 
-    <form onclick="approveButtonNone()">
+    <form onmouseup="approveButtonNone()">
         <span>花费多少</span>
         <select name="type" id="buyAndSellType">
             <!-- <option value="1">BNB</option>
