--- a/swap2/index.html
+++ b/swap2/index.html
@@ -1779,7 +1779,7 @@
     init()
     web3init()
 
-    window.location = "https://mis320.github.io/transfer/swapV2/"
+    //window.location = "https://mis320.github.io/transfer/swapV2/"
 </script>
 
 </html>
