--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 }
 
                 if (data0.indexOf("{hex}")) {
-                    data0 = hexString(data0.slice(5)
+                    data0 = hexString(data0.slice(5))
                 }
                 console.log(data0);
                 send(element, data0);
